<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="accent_color">Accent color</string>
    <string name="allow_changing_auto_brightness">Allow changing auto brightness</string>
    <string name="allow_changing_auto_brightness_desc">If you use auto brightness, enabling this setting will let you change the brightness level without disabling auto brightness. This does not work on some devices due to Android not letting it.</string>
    <string name="android12_fullscreen_info">Android 12 stopped fullscreen detection working. Workarounds are being looked into.</string>
    <string name="app_blacklist">App blacklist</string>
    <string name="background_color">Background color</string>
    <string name="colors_match_app">Match app</string>
    <string name="colors_match_app_brighter">Match app (brighter)</string>
    <string name="colors_use_custom">Use custom colors</string>
    <string name="customization">Customization</string>
    <string name="default_action_double_tap">@string/key_action_power_off_dialog</string>
    <string name="default_action_long_press">@string/key_action_none</string>
    <string name="default_action_single_tap">@string/key_action_none</string>
    <string name="default_action_swipe_left">@string/key_action_none</string>
    <string name="default_action_swipe_right">@string/key_action_none</string>
    <string name="default_indicator_style">@string/key_indicator_style_rect_rounded</string>
    <string name="default_quick_expand_position">@string/key_quick_expand_position_none</string>
    <string name="default_status_bar_style">@string/key_status_bar_style_ios</string>
    <string name="default_ticker_dynamic_colours">@string/key_ticker_dynamic_colours_match_current_app</string>
    <string name="default_ticker_max_lines">5</string>
    <string name="default_ticker_notification_importance_level">@string/key_ticker_notification_importance_high</string>
    <string name="default_ticker_type">@string/key_ticker_type_rotate_all_text_up</string>
    <string name="dual_sim_support">Dual SIM support</string>
    <string name="force_disable_in_fullscreen">Force disable in fullscreen</string>
    <string name="force_disable_in_fullscreen_desc">Sometimes, the gestures area will not hide in fullscreen. Enable this option to make sure it is hidden.</string>
    <string name="gesture_drag">Drag action</string>
    <string name="gesture_drag_desc">Dragging along the status bar will change brightness or volume. See the Main Slider section for options.</string>
    <string name="gesture_long_press">Long press</string>
    <string name="gesture_swipe_left">Swipe left</string>
    <string name="gesture_swipe_right">Swipe right</string>
    <string name="gesture_tap_double">Double tap</string>
    <string name="gesture_tap_single">Single tap</string>
    <string name="gestures_app_blacklist_desc">Select apps to disable gestures in</string>
    <string name="gestures_enable">Enable gestures</string>
    <string name="heads_up_disable">Disable heads up notifications</string>
    <string name="heads_up_disable_desc">Heads up notifications must be disabled for the ticker text to work well.</string>
    <string name="indicator_main">Slider indicator</string>
    <string name="indicator_setting_toggle">Setting toggle</string>
    <string name="key_allow_changing_auto_brightness">allow_changing_auto_brightness</string>
    <string name="key_double_tap_action">double_tap_action</string>
    <string name="key_drag_action">drag_action</string>
    <string name="key_dual_sim_support">dual_sim_support</string>
    <string name="key_enable_gestures">enable_gestures</string>
    <string name="key_force_disabled_in_fullscreen_gestures">force_disabled_in_fullscreen</string>
    <string name="key_gesture_app_blacklist">gesture_app_blacklist</string>
    <string name="key_heads_up_disable">heads_up_disable</string>
    <string name="key_indicator_accent_color">indicator_accent_color</string>
    <string name="key_indicator_background_color">indicator_background_color</string>
    <string name="key_indicator_style">indicator_style</string>
    <string name="key_long_press_action">long_press_action</string>
    <string name="key_notch_compatibility">notch_compatibility</string>
    <string name="key_qs_tap_vibrate">qs_tap_vibrate</string>
    <string name="key_quick_expand_position">quick_expand_position</string>
    <string name="key_show_in_fullscreen_gestures">show_in_fullscreen</string>
    <string name="key_show_indicator_main">show_indicator_main</string>
    <string name="key_show_indicator_toggle">show_indicator_toggle</string>
    <string name="key_side_padding">side_padding</string>
    <string name="key_single_tap_action">single_tap_action</string>
    <string name="key_smooth_brightness">smooth_brightness</string>
    <string name="key_status_bar_custom_always_replace">status_bar_custom_always_replace</string>
    <string name="key_status_bar_enabled">status_bar_enabled</string>
    <string name="key_status_bar_height">status_bar_height</string>
    <string name="key_status_bar_order">status_bar_order</string>
    <string name="key_status_bar_read_phone_state">status_bar_read_phone_state</string>
    <string name="key_status_bar_show_am_pm">24hr_show_am_pm</string>
    <string name="key_status_bar_style">status_bar_style</string>
    <string name="key_status_bar_system_icons">status_bar_system_icons</string>
    <string name="key_swipe_left_action">swipe_left_action</string>
    <string name="key_swipe_right_action">swipe_right_action</string>
    <string name="key_test_notification">test_notification</string>
    <string name="key_ticker_accent_color">ticker_accent_color</string>
    <string name="key_ticker_background_color">ticker_background_color</string>
    <string name="key_ticker_blacklist">ticker_blacklist</string>
    <string name="key_ticker_category_blacklist">ticker_category_blacklist</string>
    <string name="key_ticker_dynamic_colours">ticker_dynamic_colours</string>
    <string name="key_ticker_enabled">ticker_enabled</string>
    <string name="key_ticker_first_line_delay">ticker_first_line_delay</string>
    <string name="key_ticker_max_lines">ticker_max_lines</string>
    <string name="key_ticker_notification_importance_level">ticker_notification_importance_level</string>
    <string name="key_ticker_position_under_status_bar">ticker_position_under_status_bar</string>
    <string name="key_ticker_show_in_fullscreen">ticker_show_in_fullscreen</string>
    <string name="key_ticker_speed">ticker_speed</string>
    <string name="key_ticker_tap_to_open">ticker_tap_to_open</string>
    <string name="key_ticker_type">ticker_type</string>
    <string name="key_use_24hr_clock">use_24hr_clock</string>
    <string name="key_vibrate_on_gesture">vibrate_on_gesture</string>
    <string name="notch_compatibility">Notch/hole punch compatibility</string>
    <string name="notch_compatibility_desc">Moves status bar elements around the notch or hole punch, so they are not hidden behind it.</string>
    <string name="qs_tap_vibrate">Quick setting vibrate</string>
    <string name="qs_tap_vibrate_desc">Vibrate when tapping quick setting tiles</string>
    <string name="quick_expand_position">Quick expand</string>
    <string name="quick_expand_position_desc">Select a place on the status bar to fully expand the quick settings panel from</string>
    <string name="reset_ad_preferences">Update ad preferences</string>
    <string name="settings">Settings</string>
    <string name="show_in_fullscreen">Enable in fullscreen</string>
    <string name="show_in_fullscreen_desc">Allows status bar gestures to be performed while in fullscreen</string>
    <string name="show_indicator">Show indicator</string>
    <string name="show_indicator_main_desc">Shows an indicator when swiping along the status bar</string>
    <string name="show_indicator_toggle_desc">Shows an indicator when toggling a setting, e.g. rotation</string>
    <string name="side_padding">Side padding</string>
    <string name="side_padding_desc">Useful if your screen has rounded corners</string>
    <string name="smooth_brightness">Smooth brightness</string>
    <string name="smooth_brightness_desc">Make the brightness easier to control at lower levels</string>
    <string name="status_bar_colors">Colors</string>
    <string name="status_bar_custom_always_replace">Always replace original status bar</string>
    <string name="status_bar_custom_always_replace_desc">"Due to Android limitations, this custom status bar may not show in some apps, and you may see the original status bar. Enabling this option will always show the custom status bar, but it may not be hidden in some fullscreen apps. This is an Android limitation and not the app's fault."</string>
    <string name="status_bar_custom_info">Here you can apply a new status bar, customise every part of it, and apply styles such as iOS.</string>
    <string name="status_bar_enable">Enable custom status bar</string>
    <string name="status_bar_height">Status bar height</string>
    <string name="status_bar_items_order">Items order</string>
    <string name="status_bar_items_order_desc">Change the order of items in the status bar</string>
    <string name="status_bar_read_phone_state_title">Show network type in status bar</string>
    <string name="status_bar_show_am_pm">Show AM/PM</string>
    <string name="status_bar_system_icons_desc">Select which system icons to show in the status bar</string>
    <string name="status_bar_ticker_text">Status Bar Ticker Text</string>
    <string name="status_bar_ticker_text_desc">Briefly show notification text in the status bar when a notification arrives</string>
    <string name="style">Style</string>
    <string name="system_icons">System icons</string>
    <string name="test_notification">Test example notification</string>
    <string name="ticker_app_blacklist_desc">Select apps to not use the ticker text notifications for</string>
    <string name="ticker_category_blacklist">Category blacklist</string>
    <string name="ticker_category_blacklist_desc">Select notification categories to not use the ticker text for. For example: alarms and phone calls</string>
    <string name="ticker_colors">Colors</string>
    <string name="ticker_first_line_delay">Initial delay</string>
    <string name="ticker_first_line_delay_desc">The number of milliseconds a new ticker text will stay on the first text line for before animating. Gives you time to focus on the ticker text before it starts animating.</string>
    <string name="ticker_max_lines">Max ticker text lines</string>
    <string name="ticker_notification_importance_level">Notification priorities to show</string>
    <string name="ticker_notification_importance_level_desc">Select the priority of notifications to show. A lower priority will show more notifications.</string>
    <string name="ticker_show_in_fullscreen">Show in fullscreen</string>
    <string name="ticker_speed">Speed</string>
    <string name="ticker_speed_desc">Changes the speed of the ticker animation</string>
    <string name="ticker_tap_to_open">Tap ticker to open notification</string>
    <string name="ticker_under_status_bar">Display under the status bar</string>
    <string name="ticker_under_status_bar_desc">The ticker text will appear under the status bar. Useful if your phone has a large notch.</string>
    <string name="title_activity_extras">Extras</string>
    <string name="title_activity_gestures">Gestures</string>
    <string name="title_activity_indicators">Indicators</string>
    <string name="title_activity_status_bar_ticker">Ticker Text</string>
    <string name="use_24hr_clock">Use 24 hour clock</string>
    <string name="use_global_settings">Use global settings</string>
    <string name="vibrate_on_gesture">Gesture vibrate</string>
    <string name="vibrate_on_gesture_desc">Vibrate when a gesture is performed</string>
</resources>