<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_activity_gestures">
        <SwitchPreferenceCompat android:title="@string/gestures_enable" android:key="@string/key_enable_gestures" android:defaultValue="@bool/default_enable_gestures" app:icon="@drawable/ic_gesture" />
        <SwitchPreferenceCompat android:title="@string/gesture_drag" android:key="@string/key_drag_action" android:summary="@string/gesture_drag_desc" android:dependency="@string/key_enable_gestures" android:defaultValue="@bool/default_action_drag" app:icon="@drawable/ic_drag" />
        <com.tombayley.preferences.IconPreference android:title="@string/gesture_tap_single" android:key="@string/key_single_tap_action" android:dependency="@string/key_enable_gestures" android:defaultValue="@string/default_action_single_tap" app:icon="@drawable/ic_tap_single" />
        <com.tombayley.preferences.IconPreference android:title="@string/gesture_tap_double" android:key="@string/key_double_tap_action" android:dependency="@string/key_enable_gestures" android:defaultValue="@string/default_action_double_tap" app:icon="@drawable/ic_tap_double" />
        <com.tombayley.preferences.IconPreference android:title="@string/gesture_long_press" android:key="@string/key_long_press_action" android:dependency="@string/key_enable_gestures" android:defaultValue="@string/default_action_long_press" app:icon="@drawable/ic_long_press" />
        <com.tombayley.preferences.IconPreference android:title="@string/gesture_swipe_left" android:key="@string/key_swipe_left_action" android:dependency="@string/key_enable_gestures" android:defaultValue="@string/default_action_swipe_left" app:icon="@drawable/ic_swipe_left" />
        <com.tombayley.preferences.IconPreference android:title="@string/gesture_swipe_right" android:key="@string/key_swipe_right_action" android:dependency="@string/key_enable_gestures" android:defaultValue="@string/default_action_swipe_right" app:attr_icon="@drawable/ic_speed" app:icon="@drawable/ic_swipe_right" />
        <com.tombayley.statusbar.app.ui.common.preference.SingleAdPreference android:key="ad" />
        <ListPreference android:icon="@drawable/ic_bar_arrow_down" android:entries="@array/quick_expand_position_entries" android:title="@string/quick_expand_position" android:key="@string/key_quick_expand_position" android:summary="@string/quick_expand_position_desc" android:dependency="@string/key_enable_gestures" android:defaultValue="@string/default_quick_expand_position" android:entryValues="@array/quick_expand_position_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings">
        <SwitchPreferenceCompat android:icon="@drawable/ic_vibrate" android:title="@string/vibrate_on_gesture" android:key="@string/key_vibrate_on_gesture" android:summary="@string/vibrate_on_gesture_desc" android:defaultValue="@bool/default_vibrate_on_gesture" />
        <Preference android:title="@string/app_blacklist" android:key="@string/key_gesture_app_blacklist" android:summary="@string/gestures_app_blacklist_desc" app:icon="@drawable/ic_block" />
        <Preference android:icon="@drawable/ic_info" android:key="android12_fullscreen_info" android:summary="@string/android12_fullscreen_info" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat android:title="@string/force_disable_in_fullscreen" android:key="@string/key_force_disabled_in_fullscreen_gestures" android:summary="@string/force_disable_in_fullscreen_desc" android:defaultValue="@bool/default_force_disabled_in_fullscreen_gestures" android:disableDependentsState="true" app:icon="@drawable/ic_fullscreen" />
        <SwitchPreferenceCompat android:title="@string/show_in_fullscreen" android:key="@string/key_show_in_fullscreen_gestures" android:summary="@string/show_in_fullscreen_desc" android:dependency="@string/key_force_disabled_in_fullscreen_gestures" android:defaultValue="@bool/default_show_in_fullscreen_gestures" />
    </PreferenceCategory>
</PreferenceScreen>
