<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_activity_status_bar_ticker">
        <SwitchPreferenceCompat android:title="@string/status_bar_ticker_text" android:key="@string/key_ticker_enabled" android:summary="@string/status_bar_ticker_text_desc" android:defaultValue="@bool/default_ticker_enabled" />
        <SwitchPreferenceCompat android:title="@string/heads_up_disable" android:key="@string/key_heads_up_disable" android:summary="@string/heads_up_disable_desc" android:defaultValue="@bool/default_heads_up_disable" app:icon="@drawable/notifications" />
        <Preference android:title="@string/test_notification" android:key="@string/key_test_notification" app:dependency="@string/key_ticker_enabled" app:icon="@drawable/ic_notifications_active" />
        <SwitchPreferenceCompat android:title="@string/ticker_under_status_bar" android:key="@string/key_ticker_position_under_status_bar" android:summary="@string/ticker_under_status_bar_desc" android:defaultValue="@bool/default_ticker_under_status_bar" app:icon="@drawable/ic_ticker_under_status_bar" />
    </PreferenceCategory>
    <com.tombayley.statusbar.app.ui.common.preference.SingleAdPreference android:key="ad" />
    <PreferenceCategory android:title="@string/customization">
        <Preference android:title="@string/style" android:key="@string/key_ticker_type" android:defaultValue="@string/default_ticker_type" app:icon="@drawable/ic_style" app:useSimpleSummaryProvider="true" />
        <ListPreference android:entries="@array/ticker_dynamic_colors_entries" android:title="@string/ticker_colors" android:key="@string/key_ticker_dynamic_colours" android:defaultValue="@string/default_ticker_dynamic_colours" android:entryValues="@array/ticker_dynamic_colors_values" app:icon="@drawable/ic_color_palette" app:useSimpleSummaryProvider="true" />
        <com.tombayley.statusbar.app.ui.common.premiumoverlay.ColorPreferenceCompatOverlay android:title="@string/background_color" android:key="@string/key_ticker_background_color" android:defaultValue="@color/default_ticker_background_color" app:attr_requiresPremium="true" />
        <com.tombayley.statusbar.app.ui.common.premiumoverlay.ColorPreferenceCompatOverlay android:title="@string/accent_color" android:key="@string/key_ticker_accent_color" android:defaultValue="@color/default_ticker_accent_color" app:attr_requiresPremium="true" app:cpv_showAlphaSlider="true" />
        <com.tombayley.preferences.DecimalSeekBarPreference android:title="@string/ticker_speed" android:key="@string/key_ticker_speed" android:summary="@string/ticker_speed_desc" app:attr_defaultFloat="1.0" app:attr_maxFloat="@dimen/ticker_speed_max" app:attr_minFloat="@dimen/ticker_speed_min" app:attr_saveOnChange="false" app:attr_stepCount="@integer/ticker_speed_steps" app:attr_useFloat="true" app:icon="@drawable/ic_speed" />
        <com.tombayley.preferences.DecimalSeekBarPreference android:title="@string/ticker_first_line_delay" android:key="@string/key_ticker_first_line_delay" android:summary="@string/ticker_first_line_delay_desc" app:attr_defaultFloat="@dimen/default_ticker_first_line_delay" app:attr_maxFloat="@dimen/ticker_first_line_delay_max" app:attr_minFloat="@dimen/ticker_first_line_delay_min" app:attr_saveOnChange="false" app:attr_stepCount="@integer/ticker_first_line_delay_steps" app:attr_useFloat="false" app:icon="@drawable/ic_timer" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings">
        <com.tombayley.statusbar.app.ui.common.premiumoverlay.SwitchPreferenceCompatOverlay android:title="@string/ticker_tap_to_open" android:key="@string/key_ticker_tap_to_open" android:defaultValue="@bool/default_ticker_tap_to_open" app:attr_requiresPremium="true" app:icon="@drawable/ic_tap_single" />
        <Preference android:title="@string/app_blacklist" android:key="@string/key_ticker_blacklist" android:summary="@string/ticker_app_blacklist_desc" app:icon="@drawable/ic_block" />
        <MultiSelectListPreference android:entries="@array/ticker_category_blacklist_entries" android:title="@string/ticker_category_blacklist" android:key="@string/key_ticker_category_blacklist" android:summary="@string/ticker_category_blacklist_desc" android:defaultValue="@array/ticker_category_blacklist_defaults" android:entryValues="@array/ticker_category_blacklist_values" app:icon="@drawable/ic_block" />
        <Preference android:icon="@drawable/ic_priority" android:title="@string/ticker_notification_importance_level" android:key="@string/key_ticker_notification_importance_level" android:summary="@string/ticker_notification_importance_level_desc" android:defaultValue="@string/default_ticker_notification_importance_level" app:useSimpleSummaryProvider="true" />
        <ListPreference android:icon="@drawable/ic_text_lines" android:entries="@array/ticker_max_lines_entries" android:title="@string/ticker_max_lines" android:key="@string/key_ticker_max_lines" android:defaultValue="@string/default_ticker_max_lines" android:entryValues="@array/ticker_max_lines_values" app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat android:icon="@drawable/ic_fullscreen" android:title="@string/ticker_show_in_fullscreen" android:key="@string/key_ticker_show_in_fullscreen" android:defaultValue="@bool/default_ticker_show_in_fullscreen" />
    </PreferenceCategory>
</PreferenceScreen>
