<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:icon="@drawable/ic_info" android:key="info" android:summary="@string/status_bar_custom_info" />
    <SwitchPreferenceCompat android:title="@string/status_bar_enable" android:key="@string/key_status_bar_enabled" android:defaultValue="@bool/default_status_bar_enabled" />
    <com.tombayley.statusbar.extensions.BoldSwitchPreference android:title="@string/status_bar_read_phone_state_title" android:key="@string/key_status_bar_read_phone_state" android:defaultValue="false" app:attr_defaultValue="false" app:icon="@drawable/ic_network_type" />
    <Preference android:title="@string/style" android:key="@string/key_status_bar_style" android:defaultValue="@string/default_status_bar_style" app:icon="@drawable/ic_style" app:useSimpleSummaryProvider="true" />
    <Preference android:title="@string/status_bar_colors" android:key="colors" app:icon="@drawable/ic_color_palette" />
    <com.tombayley.statusbar.app.ui.common.preference.SingleAdPreference android:key="ad" />
    <MultiSelectListPreference android:entries="@array/status_bar_system_icons_entries" android:title="@string/system_icons" android:key="@string/key_status_bar_system_icons" android:summary="@string/status_bar_system_icons_desc" android:defaultValue="@array/status_bar_system_icons_default" android:entryValues="@array/status_bar_system_icons_values" app:icon="@drawable/ic_status_bar" />
    <Preference android:title="@string/status_bar_items_order" android:key="@string/key_status_bar_order" android:summary="@string/status_bar_items_order_desc" app:icon="@drawable/ic_dashboard" />
    <SeekBarPreference android:icon="@drawable/ic_height" android:max="@integer/status_bar_height_max" android:title="@string/status_bar_height" android:key="@string/key_status_bar_height" app:min="15" app:showSeekBarValue="true" app:updatesContinuously="true" />
    <SwitchPreferenceCompat android:title="@string/dual_sim_support" android:key="@string/key_dual_sim_support" android:defaultValue="@bool/default_dual_sim_support" app:icon="@drawable/ic_dual_sim" />
    <SwitchPreferenceCompat android:title="@string/use_24hr_clock" android:key="@string/key_use_24hr_clock" android:defaultValue="@bool/default_use_24hr_clock" app:icon="@drawable/ic_clock" />
    <SwitchPreferenceCompat android:title="@string/status_bar_show_am_pm" android:key="@string/key_status_bar_show_am_pm" android:defaultValue="@bool/default_status_bar_show_am_pm" app:isPreferenceVisible="false" />
    <Preference android:icon="@drawable/ic_info" android:key="android12_fullscreen_info" android:summary="@string/android12_fullscreen_info" app:isPreferenceVisible="false" />
    <SwitchPreferenceCompat android:title="@string/status_bar_custom_always_replace" android:key="@string/key_status_bar_custom_always_replace" android:summary="@string/status_bar_custom_always_replace_desc" android:defaultValue="@bool/default_status_bar_custom_always_replace" app:icon="@drawable/ic_fullscreen" />
</PreferenceScreen>
