<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_activity_extras">
        <SeekBarPreference android:max="@integer/side_padding_max" android:title="@string/side_padding" android:key="@string/key_side_padding" android:summary="@string/side_padding_desc" android:defaultValue="@integer/default_side_padding" app:icon="@drawable/ic_side_padding" app:min="@integer/side_padding_min" app:showSeekBarValue="true" app:updatesContinuously="true" />
        <SwitchPreferenceCompat android:title="@string/qs_tap_vibrate" android:key="@string/key_qs_tap_vibrate" android:summary="@string/qs_tap_vibrate_desc" android:defaultValue="@bool/default_qs_tap_vibrate" app:icon="@drawable/ic_vibrate" />
        <SwitchPreferenceCompat android:title="@string/allow_changing_auto_brightness" android:key="@string/key_allow_changing_auto_brightness" android:summary="@string/allow_changing_auto_brightness_desc" android:defaultValue="@bool/default_allow_changing_auto_brightness" app:icon="@drawable/ic_brightness_auto" />
        <SwitchPreferenceCompat android:title="@string/smooth_brightness" android:key="@string/key_smooth_brightness" android:summary="@string/smooth_brightness_desc" android:defaultValue="@bool/default_smooth_brightness" app:icon="@drawable/brightness" />
        <SwitchPreferenceCompat android:title="@string/notch_compatibility" android:key="@string/key_notch_compatibility" android:summary="@string/notch_compatibility_desc" android:defaultValue="@bool/default_notch_compatibility" app:icon="@drawable/ic_notch" />
        <Preference android:title="@string/reset_ad_preferences" android:key="reset_ad_personalization" app:isPreferenceVisible="false" />
    </PreferenceCategory>
</PreferenceScreen>
