<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/app_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" app:layout_constraintBottom_toTopOf="@id/app_name" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textStyle="bold" android:gravity="center_vertical" android:id="@id/app_name" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_icon" />
    <com.google.android.material.switchmaterial.SwitchMaterial android:textColor="?colorTextSoft" android:id="@id/use_global" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_global_settings" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/app_name" app:layout_constraintTop_toTopOf="parent" app:switchPadding="10.0dip" />
    <com.google.android.material.button.MaterialButtonToggleGroup android:orientation="vertical" android:id="@id/toggle_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/app_name" app:layout_constraintTop_toBottomOf="@id/use_global" app:selectionRequired="true" app:singleSelection="true">
        <com.google.android.material.button.MaterialButton android:textSize="13.0sp" android:id="@id/btn_dynamic" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/colors_match_app" android:insetTop="0.0dip" android:insetBottom="0.0dip" style="@style/ToggleButton" />
        <com.google.android.material.button.MaterialButton android:textSize="13.0sp" android:id="@id/btn_dynamic_brighter" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/colors_match_app_brighter" android:insetTop="0.0dip" android:insetBottom="0.0dip" style="@style/ToggleButton" />
        <com.google.android.material.button.MaterialButton android:textSize="13.0sp" android:id="@id/btn_custom_colors" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="0.0dip" android:text="@string/colors_use_custom" android:insetTop="0.0dip" android:insetBottom="0.0dip" style="@style/ToggleButton" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <LinearLayout android:orientation="vertical" android:id="@id/accent_color_layout" android:background="@drawable/ripple_round_rect" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:clipChildren="false" android:clipToPadding="false" android:layout_width="130.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:layout_constraintEnd_toStartOf="@id/background_color_layout" app:layout_constraintStart_toEndOf="@id/app_name" app:layout_constraintTop_toBottomOf="@id/toggle_group">
        <com.tombayley.statusbar.app.ui.common.ColorCircle android:layout_gravity="center" android:id="@id/accent_color_circle" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginBottom="4.0dip" app:attr_strokeColor="?colorTextSecondary" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="12.0sp" android:textColor="?colorTextSoft" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/accent_color" android:lines="2" android:alpha="0.8" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/background_color_layout" android:background="@drawable/ripple_round_rect" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:clipChildren="false" android:clipToPadding="false" android:layout_width="130.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/accent_color_layout" app:layout_constraintTop_toBottomOf="@id/toggle_group">
        <com.tombayley.statusbar.app.ui.common.ColorCircle android:layout_gravity="center" android:id="@id/background_color_circle" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginBottom="4.0dip" app:attr_strokeColor="?colorTextSecondary" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="12.0sp" android:textColor="?colorTextSoft" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/background_color" android:lines="2" android:alpha="0.8" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
